--- a/layouts/mainWindow.glade
+++ b/layouts/mainWindow.glade
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
-  <requires lib="gtk+" version="3.20"/>
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="MainWindow">
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
+    <property name="title" translatable="yes">OpenRCT2 Silent Launcher</property>
+    <property name="icon-name">input-gaming</property>
     <signal name="destroy" handler="onDestroy" swapped="no"/>
-    <child type="titlebar">
-      <placeholder/>
-    </child>
     <child>
       <object class="GtkNotebook" id="NotebookView">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="show_border">False</property>
+        <property name="can-focus">True</property>
+        <property name="show-border">False</property>
         <child>
           <object class="GtkBox" id="LaunchBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel">
+                <property name="name">a</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="margin_left">32</property>
-                <property name="margin_right">32</property>
-                <property name="margin_top">16</property>
-                <property name="margin_bottom">16</property>
+                <property name="can-focus">False</property>
+                <property name="margin-left">32</property>
+                <property name="margin-right">32</property>
+                <property name="margin-top">16</property>
+                <property name="margin-bottom">16</property>
+                <property name="label" translatable="yes">hello this is rct2 speaking can u please so your magic thx</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -37,10 +38,10 @@
               <object class="GtkButton" id="BtnDownload">
                 <property name="label" translatable="yes">Download OpenRCT2</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
                 <property name="halign">center</property>
-                <property name="margin_bottom">16</property>
+                <property name="margin-bottom">16</property>
                 <signal name="clicked" handler="onDownloadClick" swapped="no"/>
               </object>
               <packing>
@@ -50,19 +51,47 @@
               </packing>
             </child>
             <child>
-              <object class="GtkProgressBar" id="PgrDownload">
-                <property name="can_focus">False</property>
-                <property name="valign">start</property>
-                <property name="margin_left">32</property>
-                <property name="margin_right">32</property>
-                <property name="margin_bottom">32</property>
-                <property name="show_text">True</property>
-                <property name="ellipsize">start</property>
+              <object class="GtkBox" id="DownloadContainer">
+                <property name="can-focus">False</property>
+                <property name="no-show-all">True</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkProgressBar" id="PgrDownload">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="valign">start</property>
+                    <property name="margin-left">32</property>
+                    <property name="margin-right">32</property>
+                    <property name="margin-bottom">16</property>
+                    <property name="show-text">True</property>
+                    <property name="ellipsize">start</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="LblSpeed">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="halign">center</property>
+                    <property name="valign">start</property>
+                    <property name="label" translatable="yes">0Kb/s</property>
+                    <property name="justify">center</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">4</property>
               </packing>
             </child>
           </object>
@@ -70,17 +99,17 @@
         <child type="tab">
           <object class="GtkLabel" id="TabLabel1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes">Launch</property>
           </object>
           <packing>
-            <property name="tab_fill">False</property>
+            <property name="tab-fill">False</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="SettingsBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <placeholder/>
@@ -99,12 +128,12 @@
         <child type="tab">
           <object class="GtkLabel" id="TabLabel2">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes">Settings</property>
           </object>
           <packing>
             <property name="position">1</property>
-            <property name="tab_fill">False</property>
+            <property name="tab-fill">False</property>
           </packing>
         </child>
         <child>
