--- a/layouts/mainWindow.glade
+++ b/layouts/mainWindow.glade
@@ -26,7 +26,7 @@
                 <property name="margin-right">32</property>
                 <property name="margin-top">16</property>
                 <property name="margin-bottom">16</property>
-                <property name="label" translatable="yes">hello this is rct2 speaking can u please so your magic thx</property>
+                <property name="label" translatable="yes">hello this is rct2 speaking can u please do your magic thx</property>
               </object>
               <packing>
                 <property name="expand">False</property>
