--- a/resources/update_window.glade
+++ b/resources/update_window.glade
@@ -4,9 +4,12 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_window">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">OpenRCT2 Silent Launcher</property>
     <property name="resizable">False</property>
     <property name="window-position">center</property>
+    <property name="default-width">360</property>
     <property name="icon">..\design\Windows Icon@0,25x.png</property>
+    <property name="type-hint">dialog</property>
     <property name="urgency-hint">True</property>
     <child>
       <object class="GtkBox">
